--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
 
 <footer class="footer bg-info"> 
     <div class="text-center p-4" >
-        <p>Instituto Parroquial Monte Cristo</p>
+        <p>Instituto Parroquial Monte Cristo <a href="https://www.instagram.com/p/Cqd4wLIrL9w/?img_index=1"><i class="bi bi-instagram"></i></a></p>
         © 2023 Copyright:
         <a style="text-decoration: none" class="text-reset fw-bold" href="">Ramos, Juan Carlos</a>
     </div>
