--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="icons/font/bootstrap-icons.css">
     <title>Expoferia 2023 IPMC</title>
     <link rel="shortcut icon" href="imagenes/Logo-IPMC.png">
 
@@ -116,6 +116,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
 
 <footer class="footer bg-info"> 
     <div class="text-center p-4" >
+        <a href="https://www.facebook.com/parroquialmontecristo/?locale=es_LA"><i class="bi bi-facebook"></i></a>
         <p>Instituto Parroquial Monte Cristo</p>
         © 2023 Copyright:
         <a style="text-decoration: none" class="text-reset fw-bold" href="">Ramos, Juan Carlos</a>
