--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
 
 <footer class="footer bg-info"> 
     <div class="text-center p-4" >
-        <a href="https://www.facebook.com/parroquialmontecristo/?locale=es_LA"><i class="bi bi-facebook"></i></a>
+        <a class="icon-link" href="https://www.facebook.com/parroquialmontecristo/?locale=es_LA"><i class="bi bi-facebook"></i></a>
         <p>Instituto Parroquial Monte Cristo</p>
         © 2023 Copyright:
         <a style="text-decoration: none" class="text-reset fw-bold" href="">Ramos, Juan Carlos</a>
