--- a/index.html
+++ b/index.html
@@ -122,14 +122,18 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
     <div class="text-center p-4" >
 
         <div style="display: flex;">
-        Instituto Parroquial Monte Cristo 
+        <div>
+            Instituto Parroquial Monte Cristo 
         <a href="https://www.facebook.com/parroquialmontecristo"  style="margin-right: 5px; margin-left: 5px;"><i class="bi bi-facebook" style="color: black;"></i></a>
         <a href="https://www.instagram.com/p/Cqd4wLIrL9w/?img_index=1"  ><i class="bi bi-instagram" style="color: black;"></i></a>
-        <br>
-        <a style="text-decoration: none" class="text-reset fw-bold" href="">© 2023 Copyright: Ramos, Juan Carlos</a>
+        </div>
+        <div>
+            <a style="text-decoration: none" class="text-reset fw-bold" href="">© 2023 Copyright: Ramos, Juan Carlos</a>
+        </div>
         </div>
     </div>
 </footer>
+    
     
 </body>
 
