--- a/1roA.html
+++ b/1roA.html
@@ -38,20 +38,23 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/CARAMEL COOKIE 1A.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Delicias del sabor.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Caramel Cookie</h4>
+                                            <h4 class="card-title">Delicias del sabor</h4>
                                             <p class="card-text">Alfajores de chocolate.</p>
 
                                         </div>
-
+<button type="button" class="btn btn-primary">
+  <i class="fa fa-book"></i>
+  <span> Primary </span>
+</button>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/EXPOLEMON 1A.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Dulce tesoro.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">EXPOLEMON</h4>
+                                            <h4 class="card-title">Dulce tesoro</h4>
                                             <p class="card-text">Lemon pie.</p>
 
                                         </div>
@@ -59,9 +62,9 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/Los gordis pastelitos 1A.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/El arte de lo dulce.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Los gordis</h4>
+                                            <h4 class="card-title">El arte de lo dulce</h4>
                                             <p class="card-text">Pastelitos.</p>
 
                                         </div>
