--- a/1roA.html
+++ b/1roA.html
@@ -38,16 +38,17 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/Delicias del sabor.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Delicias del sabor.jpeg">
                                         <div class="card-body">
                                             <h4 class="card-title">Delicias del sabor</h4>
-                                            <p class="card-text">Alfajores de chocolate.</p>
+                                            <p class="card-text">Piononos.</p>
 
                                         </div>
-<button type="button" class="btn btn-primary">
-  <i class="fa fa-book"></i>
-  <span> Primary </span>
-</button>
+
+                                      <button type="button" class="btn btn-primary">
+                                          <i class="bi bi-instagram""></i>
+                                          <span> + info </span>
+                                      </button>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
