--- a/1roA.html
+++ b/1roA.html
@@ -44,11 +44,8 @@
                                             <p class="card-text">Piononos.</p>
 
                                         </div>
-
-                                      <button type="button" class="btn btn-primary">
-                                          <i class="bi bi-instagram""></i>
-                                          <span> + info </span>
-                                      </button>
+<a href="https://www.instagram.com/deliciassdelsabor_?igsh=MTZoajk3aXdybTRhYw==" class="btn btn-warning btn-rounded"> <i class="bi bi-instagram""></i>+ Info</a>
+                                      
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
