--- a/1roA.html
+++ b/1roA.html
@@ -48,7 +48,7 @@
                                             <p class="card-text">Piononos.</p>
 
                                         </div>
-<a href="https://www.instagram.com/deliciassdelsabor_?igsh=MTZoajk3aXdybTRhYw==" target="_blank" rel="noopener noreferrer" class="btn btn-warning btn-rounded">+ Info</a>
+<a href="https://www.instagram.com/deliciassdelsabor_?igsh=MTZoajk3aXdybTRhYw==" target="_blank" rel="noopener noreferrer" class="btn btn-warning btn-rounded"><i class="bi bi-facebook" style="color: black;"></i>+ Info</a>
                                       
                                     </div>
                                 </div>
