--- a/1roA.html
+++ b/1roA.html
@@ -45,11 +45,10 @@
                                         <img class="img-fluid" alt="100%x280" src="1ro A/Delicias del sabor.jpeg">
                                         <div class="card-body">
                                             <h4 class="card-title">Delicias del sabor</h4>
-                                            <p class="card-text">Piononos.</p>
+                                            <p class="card-text">Cada pionono, es una experiencia única que nunca pasa de moda.</p>
 
                                         </div>
-<a href="https://www.instagram.com/deliciassdelsabor_?igsh=MTZoajk3aXdybTRhYw==" target="_blank" rel="noopener noreferrer" class="btn btn-warning btn-rounded"><i class="bi bi-facebook" style="color: black;"></i>+ Info</a>
-                                      
+<a href="https://www.instagram.com/deliciassdelsabor_?igsh=MTZoajk3aXdybTRhYw==" target="_blank" rel="noopener noreferrer" class="btn btn-danger btn-rounded" ><i class="bi bi-instagram" style="color: white;"></i> + Info</a>                                      
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
