--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Cursos
+                  Productos
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="1roA.html" target="myFrame">1° Año "A"</a></li>
