--- a/1roA.html
+++ b/1roA.html
@@ -100,33 +100,38 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/Mi dulce alfajor 1A.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/la casa de los alfajores.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Mi dulce alfajor</h4>
-                                            <p class="card-text">Alfajores de maicena.</p>
+                                            <h4 class="card-title">La casa de los alfajores</h4>
+                                            <p class="card-text">Perfectos para compartir, imposibles de olvidar.</p>
 
                                         </div>
-
+  <a href="https://www.instagram.com/la_casa_de_los_alfajores.00/profilecard/?igsh=MXR5bmFncXJ0aTRnNA==" target="_blank" rel="noopener noreferrer" class="btn btn-danger btn-rounded" ><i class="bi bi-instagram" style="color: white;"></i> + Info</a>                                      
+                                   
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/Chocopop 1A.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Los muchachos.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Chocopop</h4>
-                                            <p class="card-text">Chocotortas.</p>
+                                            <h4 class="card-title">Los muchachos</h4>
+                                            <p class="card-text">Un sabor inolvidable.</p>
 
                                         </div>
+                      <a href="https://www.instagram.com/los.muchachos6?igsh=MXF3bXIwZ2xmdzdjMA==" target="_blank" rel="noopener noreferrer" class="btn btn-danger btn-rounded" ><i class="bi bi-instagram" style="color: white;"></i> + Info</a>                                      
+  
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/ExpoRol piononos 1A.png">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/Lemonlicious.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">ExpoRol</h4>
-                                            <p class="card-text">Piononos.</p>
+                                            <h4 class="card-title">Lemonlicious</h4>
+                                            <p class="card-text">El placer en cada porción.</p>
 
                                         </div>
+                                       <a href="https://www.instagram.com/lemonlicious.mtc?igsh=M240bTgzam44cWl0" target="_blank" rel="noopener noreferrer" class="btn btn-danger btn-rounded" ><i class="bi bi-instagram" style="color: white;"></i> + Info</a>                                      
+      
                                     </div>
                                 </div>
 
