--- a/1roA.html
+++ b/1roA.html
@@ -100,7 +100,7 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro A/la casa de los alfajores.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro A/La casa de los alfajores.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">La casa de los alfajores</h4>
                                             <p class="card-text">Perfectos para compartir, imposibles de olvidar.</p>
