--- a/index.html
+++ b/index.html
@@ -27,13 +27,34 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
   width: 100%;
   height: 13vh;
   text-align: center;
+color: white;
+background: #333;
+
+}
+.navbar-dark .navbar-nav .nav-link {
+color: white;
+}
+
+.navbar-dark .navbar-nav .dropdown-menu {
+background: #333;
+color: white;
+}
+
+.navbar-dark .navbar-nav .dropdown-menu li a {
+background: #333;
+color: white;
+}
+
+.navbar-dark .navbar-nav .dropdown-menu li a:hover {
+background: white;
+color: #333;
 }
 </style>
 
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-info">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="imagenes/Logo-IPMC.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
@@ -66,6 +87,7 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
                   <li><a class="dropdown-item" href="3roB.html" target="myFrame">3° Año "B"</a></li>
                   <li><a class="dropdown-item" href="4toA.html" target="myFrame">4° Año "A"</a></li>
                   <li><a class="dropdown-item" href="4toB.html" target="myFrame">4° Año "B"</a></li>
+                    <li><a class="dropdown-item" href="5toB.html" target="myFrame">5° Año "B"</a></li>
                 </ul>
               </li>
             </ul>
@@ -124,8 +146,8 @@ form, iframe { margin:0; padding:0; height:100%; width:100%; display:block;borde
         
         <div>
             Instituto Parroquial Monte Cristo 
-        <a href="https://www.facebook.com/parroquialmontecristo"  style="margin-right: 5px; margin-left: 5px;"><i class="bi bi-facebook" style="color: black;"></i></a>
-        <a href="https://www.instagram.com/p/Cqd4wLIrL9w/?img_index=1"  ><i class="bi bi-instagram" style="color: black;"></i></a>
+        <a href="https://www.facebook.com/parroquialmontecristo"  style="margin-right: 5px; margin-left: 5px;"><i class="bi bi-facebook" style="color: white;"></i></a>
+        <a href="https://www.instagram.com/p/Cqd4wLIrL9w/?img_index=1"  ><i class="bi bi-instagram" style="color: white;"></i></a>
         </div>
         <div>
             <a style="text-decoration: none" class="text-reset fw-bold" href="">© 2023 Copyright: Ramos, Juan Carlos</a>
