--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ color: white;
 }
 
 .navbar-dark .navbar-nav .dropdown-menu {
-background: #333;
+background:#212529;
 color: white;
 }
 
 .navbar-dark .navbar-nav .dropdown-menu li a {
-background: #333;
+background: #212529;
 color: white;
 }
 
@@ -140,7 +140,7 @@ color: #333;
         <iframe id="pdf" name="myFrame" src="home.html" runat="server" frameborder="0"></iframe>
     </form>
 
-<footer class="footer bg-info"> 
+<footer class="footer bg-dark"> 
     <div class="text-center p-4" >
 
         
