--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@ La integración de las cuatro prioridades educativas provinciales garantiza una 
                   <br>
                   <br>
                 </p>
-                <img src="imagenes/fotos.bmp" style="width: 100%; height: 100%;">    
+                <img src="imagenes/expoferia-secundario1.jpg" style="width: 100%; height: 100%;">    
                 </div>
           </div>
         </div>
