--- a/home.html
+++ b/home.html
@@ -40,14 +40,11 @@ La integración de las cuatro prioridades educativas provinciales garantiza una 
             <div class="col-12 col-md-6 p-0 mt-1 mt-md-0">
                 <div class="nuevo-estilo">
                 <h2>Acuerdos didácticos</h2> 
-                <p>  1.Incentivar a los estudiantes a propiciar dinámicas de trabajo grupal, no solo con sus compañeros de curso sino también, con otros estudiantes de la institución pertenecientes a otros niveles y a otras orientaciones.
-<br>
-                  2. Gestionar y fortalecer el trabajo compartido entre asignaturas y entre especialidades, en espacios de formación curricular donde se ofrezcan posibilidades de resolución de situaciones problemáticas. 
-                  <br>
-                  3. Visión pastoral: Estimular y apropiarse de valores, tales como el respeto y la                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              honestidad, la tolerancia y la cooperación, y el trabajo mancomunado que  llevarán a cabo todos los actores de la experiencia: estudiantes, docentes y comunidad en general, en un espíritu fraterno.
-                  <br>
-                  4. Oralidad, lectura y escritura: Generar situaciones de lectura propuestas dentro de un eje o situación contextualizada (que en este caso concreto, sería la feria). 
-                  <br>
+                <p> 1- Promover la interacción y el trabajo en equipo entre estudiantes de diversos perfiles, fomentando así una comunidad educativa más cohesionada.
+2- Integrar los conocimientos de diferentes áreas en la resolución de problemas reales, preparando a los estudiantes para los desafíos del mundo actual.
+3- Fomentar una cultura de valores que promueva el respeto, la tolerancia y la colaboración entre todos los miembros de la comunidad.
+4- Desarrollar las competencias comunicativas de los estudiantes a través de actividades significativas y contextualizadas, como la participación en la feria. 
+                    <br>
                   <br>
                 </p>
                 <img src="imagenes/expoferia-secundario1.jpg" style="width: 100%; height: 100%;">    
