--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@ La integración de las cuatro prioridades educativas provinciales garantiza una 
             <div class="col-12 col-md-6 p-0 mt-1 mt-md-0">
                 <div class="nuevo-estilo">
                 <h2>Acuerdos didácticos</h2> 
-                <p> 1- Promover la interacción y el trabajo en equipo entre estudiantes de diversos perfiles, fomentando así una comunidad educativa más cohesionada.
-2- Integrar los conocimientos de diferentes áreas en la resolución de problemas reales, preparando a los estudiantes para los desafíos del mundo actual.
-3- Fomentar una cultura de valores que promueva el respeto, la tolerancia y la colaboración entre todos los miembros de la comunidad.
+                <p> 1- Promover la interacción y el trabajo en equipo entre estudiantes de diversos perfiles, fomentando así una comunidad educativa más cohesionada.  <br>
+2- Integrar los conocimientos de diferentes áreas en la resolución de problemas reales, preparando a los estudiantes para los desafíos del mundo actual.  <br>
+3- Fomentar una cultura de valores que promueva el respeto, la tolerancia y la colaboración entre todos los miembros de la comunidad. <br>
 4- Desarrollar las competencias comunicativas de los estudiantes a través de actividades significativas y contextualizadas, como la participación en la feria. 
                     <br>
                   <br>
