--- a/1roB.html
+++ b/1roB.html
@@ -24,6 +24,16 @@
         .card-content {
             padding: 10px;
         }
+                                button{
+  display: inline-block;
+  padding: 0.5em 2em;
+  background: #6f42c1;
+  color: white;
+  border-radius: 2em;
+  border:none;
+  outline: 2px solid #6f42c1;
+  outline-offset: 3px;
+}
                                 </style>
                                 <script type='text/javascript' src=''></script>
                                 <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
@@ -62,28 +72,32 @@
                                             <p class="card-text">Pastelitos estrellados de sabor.</p>
 
                                         </div>
-<a href="https://www.instagram.com/elverdaderosabordeunaestrella4/profilecard/?igsh=MWFndjJ2YzJ5OGNtbw==" target="_blank" class="btn btn-primary btn-rounded" ><i class="bi bi-instagram" style="color: white;"></i> + Info</a>
-                                    
+<a href="https://www.instagram.com/elverdaderosabordeunaestrella4/profilecard/?igsh=MWFndjJ2YzJ5OGNtbw==" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/ENROLLADITOS 1B.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Sabor y alegría.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Enrolladitos</h4>
-                                            <p class="card-text">Piononos.</p>
+                                            <h4 class="card-title">Sabor y alegría</h4>
+                                            <p class="card-text">El rincón de la pastafrola.</p>
 
                                         </div>
+                                      <a href="https://www.instagram.com/sabor.y.alegria__?igsh=eTZsNXRuM2d3dzI0&utm_source=qr" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/La locura del sabor 1B.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Chocoalfajor.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">La locura del sabor</h4>
-                                            <p class="card-text">Chocotorta</p>
+                                            <h4 class="card-title">Chocoalfajor</h4>
+                                            <p class="card-text">Sabores y delicias artesanales.</p>
 
                                         </div>
+                                      <a href="https://www.instagram.com/chocoalfajor_ipmc/profilecard/?igsh=MWZ0bm01eXBud2o3ag==" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
 
@@ -95,33 +109,38 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/Choco manjar 1B.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Bocado argentino.jpg">
                                         <div class="card-body">
-                                            <h4 class="card-title">Choco Manjar</h4>
-                                            <p class="card-text">Alfajores de chocolate.</p>
+                                            <h4 class="card-title">Bocado argentino</h4>
+                                            <p class="card-text">El sabor genuino en cada bocado, tradición bien logrado.</p>
 
                                         </div>
-
+<a href="" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/Dulzura Alfajores de maizena.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/The lemon pastry.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Dulzura</h4>
-                                            <p class="card-text">Alfajores de maicena.</p>
+                                            <h4 class="card-title">The lemon pastry</h4>
+                                            <p class="card-text">Un toque de alegría en cada bocado.</p>
 
                                         </div>
+                                      <a href="https://www.instagram.com/the_lemon_pastry/profilecard/?igsh=cmZjOGM1aGNvYW4z" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/Softlemon 1B.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Dulce Explosión.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Softlemon</h4>
-                                            <p class="card-text">Lemon pie.</p>
+                                            <h4 class="card-title">Dulce Explosión</h4>
+                                            <p class="card-text">¡Dulce Explosión, el toque perfecto para todos tus antojos!</p>
 
                                         </div>
+                                      <a href="https://www.instagram.com/dulce_ipmc_explosion?igsh=MWxweHltdHVzZzRu" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
 
