--- a/1roB.html
+++ b/1roB.html
@@ -109,13 +109,13 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/Bocado argentino.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Bocado Argentino.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Bocado argentino</h4>
                                             <p class="card-text">El sabor genuino en cada bocado, tradición bien logrado.</p>
 
                                         </div>
-<a href="" target="_blank"> 
+<a href="#" target="_blank"> 
 									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="1ro B/Dulce Explosión.png">
+                                        <img class="img-fluid" alt="100%x280" src="1ro B/Dulce explosión.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Dulce Explosión</h4>
                                             <p class="card-text">¡Dulce Explosión, el toque perfecto para todos tus antojos!</p>
