--- a/home.html
+++ b/home.html
@@ -26,9 +26,14 @@
           <div class="col-12 col-md-6 p-0 pe-md-1" >
             <div class="nuevo-estilo">
             <h2>Fundamentación</h2> 
-                <p>  Mediante este proyecto, los estudiantes ponen en práctica los conocimientos adquiridos en distintas áreas, desarrollando habilidades prácticas y fomentando el trabajo colaborativo. Al diseñar y ejecutar actividades concretas, como la elaboración de materiales y presentaciones, los estudiantes fortalecen su autonomía, creatividad y pensamiento crítico.
+                <p>  La Expo Feria Tecnológica Contable y Muestra es un evento educativo innovador que integra conocimientos teóricos y prácticos de diversas áreas, como contabilidad, administración, ciencias naturales y tecnología. Esta feria ofrece a los estudiantes un espacio para aplicar sus aprendizajes de manera colaborativa, desarrollando habilidades clave para el mundo laboral, como trabajo en equipo, gestión y resolución de problemas.
+<br>
+<h2>¿En qué consiste?</h2> 
+<br>
+Producción y comercialización: Los estudiantes producen y ofrecen bienes y servicios, simulando un entorno empresarial real.<br>
+Gestión contable y administrativa: Los alumnos de los últimos años se encargan de la coordinación, facturación y otras tareas administrativas, poniendo en práctica sus conocimientos contables.<br>
+Control de calidad y seguridad alimentaria: Los estudiantes de ciencias naturales aseguran la calidad de los productos y la seguridad de los consumidores.<br>
 
-La integración de las cuatro prioridades educativas provinciales garantiza una formación integral, mientras que el ambiente de aprendizaje colaborativo y la guía docente promueven el desarrollo de competencias comunicativas y sociales. Este proyecto demuestra cómo la escuela puede ser un espacio donde los estudiantes exploran sus potencialidades y se preparan para enfrentar los desafíos del mundo real.
                 </p>
 
                 <h2>Propósitos</h2> 
@@ -39,12 +44,12 @@ La integración de las cuatro prioridades educativas provinciales garantiza una 
           </div>
             <div class="col-12 col-md-6 p-0 mt-1 mt-md-0">
                 <div class="nuevo-estilo">
-                <h2>Acuerdos didácticos</h2> 
-                <p> 1- Promover la interacción y el trabajo en equipo entre estudiantes de diversos perfiles, fomentando así una comunidad educativa más cohesionada.  <br>
-2- Integrar los conocimientos de diferentes áreas en la resolución de problemas reales, preparando a los estudiantes para los desafíos del mundo actual.  <br>
-3- Fomentar una cultura de valores que promueva el respeto, la tolerancia y la colaboración entre todos los miembros de la comunidad. <br>
-4- Desarrollar las competencias comunicativas de los estudiantes a través de actividades significativas y contextualizadas, como la participación en la feria. 
-                    <br>
+                <h2>Objetivos generales</h2> 
+                <p> 1- Promover la integración interdisciplinaria.  <br>
+2- Desarrollar competencias técnicas y empresariales.  <br>
+3- Fomentar el trabajo colaborativo y la responsabilidades. <br>
+4- Preparar a los estudiantes para su inserción en el mundo laboral.  <br>
+  5- Transferir contenidos teóricos a la práctica.  <br>                 
                   <br>
                 </p>
                 <img src="imagenes/expoferia-secundario1.jpg" style="width: 100%; height: 100%;">    
