--- a/2doA.html
+++ b/2doA.html
@@ -82,7 +82,7 @@
 
                                         </div>
 <a href="https://www.instagram.com/los_gordis_empanadas_/profilecard/?igsh=MThub2tobHdqZjAxNw==" target="_blank"> 
-									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
+			<button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
 
                                         </div>
                                       <a href="https://www.instagram.com/sabores_que_enamorann/profilecard/?igsh=MXZyejN0eXFreTVucA==" target="_blank"> 
-									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
+				<button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                     </div>
                                 </div>
@@ -128,13 +128,13 @@
 
                                         </div>
 <a href="https://www.instagram.com/italy_pizza.amour/profilecard/?igsh=dm1rcHRlbXNzejcz" target="_blank"> 
-									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
+			 <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-primary rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do A/Empanadas & Co.jpg">
+                                        <img class="img-fluid" alt="100%x280" src="2do A/Empanadas Co.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Empanadas & Co</h4>
                                             <p class="card-text">El sabor de la tradición.</p>
