--- a/2doA.html
+++ b/2doA.html
@@ -21,7 +21,13 @@
             display: flex;
             flex-direction: column;
         }
-       
+       .card .img{
+	       .img-normalizada{
+	width: 400px;
+	height: 400px;
+	object-fit: cover;
+}
+       }
         .card-content {
             padding: 10px;
         }
@@ -86,7 +92,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
                                         <img class="img-fluid" alt="100%x280" src="2do A/Sabor en cada bocado.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Sabor en cada bocado</h4>
@@ -98,7 +104,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
                                         <img class="img-fluid" alt="100%x280" src="2do A/Sabores que enamoran.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Sabores que enamoran</h4>
@@ -117,7 +123,7 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
                                         <img class="img-fluid" alt="100%x280" src="2do A/Italy.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Italy</h4>
@@ -131,8 +137,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do A/Empanadas & Co.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do A/Empanadas & Co..jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Empanadas & Co</h4>
                                             <p class="card-text">El sabor de la tradición.</p>
@@ -143,7 +149,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
                                         <img class="img-fluid" alt="100%x280" src="2do A/Flavor test.jpg">
                                         <div class="card-body">
                                             <h4 class="card-title">Flavor test</h4>
