--- a/2doA.html
+++ b/2doA.html
@@ -3,7 +3,7 @@
                             <head>
                                 <meta charset='utf-8'>
                                 <meta name='viewport' content='width=device-width, initial-scale=1'>
-                                <title>1° Año "B"</title>
+                                <title>2° Año "A"</title>
                                 <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
                                 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
 								
@@ -21,13 +21,12 @@
             display: flex;
             flex-direction: column;
         }
-       .card .img{
-	       .img-normalizada{
-	width: 400px;
-	height: 400px;
-	object-fit: cover;
+      	   .card .img-fluid{
+	 aspect-ratio: 1/1;
+    width:100%;
+    object-fit: cover;
+	
 }
-       }
         .card-content {
             padding: 10px;
         }
