--- a/2doB.html
+++ b/2doB.html
@@ -6,7 +6,49 @@
                                 <title>2° Año "B"</title>
                                 <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
                                 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
-                                <style></style>
+								
+                               <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+                              <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+                              
+                              <style>
+                                  .col-md-4 {
+            display: flex;
+            align-items: stretch;
+        }
+        .card {
+            flex: 1;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+      	   .card .img-fluid{
+	 aspect-ratio: 1/1;
+    width:100%;
+    object-fit: cover;
+	
+}
+        .card-content {
+            padding: 10px;
+        }
+                                button{
+  display: inline-block;
+  padding: 0.5em 2em;
+  background: #ffc107;
+  color: white;
+  border-radius: 2em;
+  border:none;
+  outline: 2px solid #ffc107;
+  outline-offset: 3px;
+}
+
+				      dialog {
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 300px;
+}
+                                </style>
                                 <script type='text/javascript' src=''></script>
                                 <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
                                 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
@@ -22,10 +64,10 @@
                 <h3 class="mb-3">2° Año "B" </h3>
             </div>
             <div class="col-6 text-right">
-                <a class="btn btn-warning mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                <a class="btn btn-primary mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <a class="btn btn-warning mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
+                <a class="btn btn-primary mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
                     <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
@@ -37,34 +79,61 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Chicken Little.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Empanadas al paladar.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Chicken Little</h4>
-                                            <p class="card-text">Empanadas de pollo.</p>
+                                            <h4 class="card-title">Empanadas al paladar</h4>
+                                            <p class="card-text">Nada mejor que unas empanadas al horno.</p>
 
                                         </div>
-
+<a href="https://www.instagram.com/empanadas.al.paladar/profilecard/?igsh=MTE1cThla2dwcGowZg==" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/El Octavo.png">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Pixeles.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">El Octavo</h4>
-                                            <p class="card-text">Pizzas especiales.</p>
+                                            <h4 class="card-title">Pixeles</h4>
+                                            <p class="card-text">El sabor de Italia en tu mesa.</p>
 
                                         </div>
+                                      <a href="https://www.instagram.com/pixeles._ipmc?igsh=YjdoaWhoemwyeWk2" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Empalumpas.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Maestros de la masa.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Empalumpas</h4>
-                                            <p class="card-text">Empanadas de jamón y queso.</p>
+                                            <h4 class="card-title">Maestros de la masa</h4>
+                                            <p class="card-text">Un mundo de sabor en cada mordida.</p>
 
                                         </div>
+                                      <!-- Inicio Button modal -->
+    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+
+    <dialog id="miModal">
+        <h2>¡Lo lamentamos!</h2>
+        <p>No tenemos información para mostrarte.</p>
+        <button id="cerrarModal">Cerrar</button>
+    </dialog>
+
+    <script>
+        const abrirModal = document.getElementById('abrirModal');
+        const miModal = document.getElementById('miModal');
+        const cerrarModal = document.getElementById('cerrarModal');
+
+        abrirModal.addEventListener('click',   
+ () => {
+            miModal.showModal();
+        });
+
+        cerrarModal.addEventListener('click', () => {
+            miModal.close();
+        });
+    </script>
+								<!-- Fin Button modal -->
                                     </div>
                                 </div>
 
@@ -75,34 +144,39 @@
                             <div class="row">
 
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Las delicias de Pachorra.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Mamma mia pizza.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las delicias de Pachorra</h4>
-                                            <p class="card-text">Empanadas saladas.</p>
+                                            <h4 class="card-title">Mamma mía pizzas</h4>
+                                            <p class="card-text">El arte de la pizza.</p>
 
                                         </div>
-
+ <a href="https://www.instagram.com/empanadas.al.paladar/profilecard/?igsh=MTE1cThla2dwcGowZg=="
+                               target="_blank">
+                                <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button>
+                            </a>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Las Pattys.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/Alta pinta.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Las Pattys</h4>
-                                            <p class="card-text">Empanadas Árabes.</p>
+                                            <h4 class="card-title">Alta pinta</h4>
+                                            <p class="card-text">No hay amor más sincero que el amor por las empanadas.</p>
 
                                         </div>
+                                      <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
-                                    <div class="card shadow p-3 mb-5 bg-warning rounded">
-                                        <img class="img-fluid" alt="100%x280" src="2do B/Napoletana per tutti.jpg">
+                                    <div class="card shadow p-3 mb-5 bg-primary rounded">
+                                        <img class="img-fluid" alt="100%x280" src="2do B/El rincon de las empanadas.png">
                                         <div class="card-body">
-                                            <h4 class="card-title">Napoletana per tutti</h4>
-                                            <p class="card-text">Pizzas especiales.</p>
+                                            <h4 class="card-title">El rincón de la empanada</h4>
+                                            <p class="card-text">Empanadas que te llevan al rincón del corazon.</p>
 
                                         </div>
+                                      <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
                                     </div>
                                 </div>
 
