--- a/2doB.html
+++ b/2doB.html
@@ -165,8 +165,31 @@
                                             <p class="card-text">No hay amor más sincero que el amor por las empanadas.</p>
 
                                         </div>
-                                      <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
-                                    </div>
+                                     <!-- Inicio Button modal -->
+    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+
+    <dialog id="miModal">
+        <h2>¡Lo lamentamos!</h2>
+        <p>No tenemos información para mostrarte.</p>
+        <button id="cerrarModal">Cerrar</button>
+    </dialog>
+
+    <script>
+        const abrirModal = document.getElementById('abrirModal');
+        const miModal = document.getElementById('miModal');
+        const cerrarModal = document.getElementById('cerrarModal');
+
+        abrirModal.addEventListener('click',   
+ () => {
+            miModal.showModal();
+        });
+
+        cerrarModal.addEventListener('click', () => {
+            miModal.close();
+        });
+    </script>
+								<!-- Fin Button modal -->
+				    </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-primary rounded">
@@ -176,8 +199,31 @@
                                             <p class="card-text">Empanadas que te llevan al rincón del corazon.</p>
 
                                         </div>
-                                      <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
-                                    </div>
+                                    <!-- Inicio Button modal -->
+    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+
+    <dialog id="miModal">
+        <h2>¡Lo lamentamos!</h2>
+        <p>No tenemos información para mostrarte.</p>
+        <button id="cerrarModal">Cerrar</button>
+    </dialog>
+
+    <script>
+        const abrirModal = document.getElementById('abrirModal');
+        const miModal = document.getElementById('miModal');
+        const cerrarModal = document.getElementById('cerrarModal');
+
+        abrirModal.addEventListener('click',   
+ () => {
+            miModal.showModal();
+        });
+
+        cerrarModal.addEventListener('click', () => {
+            miModal.close();
+        });
+    </script>
+								<!-- Fin Button modal -->
+				    </div>
                                 </div>
 
                             </div>
