--- a/2doB.html
+++ b/2doB.html
@@ -166,26 +166,26 @@
 
                                         </div>
                                      <!-- Inicio Button modal -->
-    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+    <a><button id="abrirModal1"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
 
-    <dialog id="miModal">
+    <dialog id="miModal1">
         <h2>¡Lo lamentamos!</h2>
         <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal">Cerrar</button>
+        <button id="cerrarModal1">Cerrar</button>
     </dialog>
 
     <script>
-        const abrirModal = document.getElementById('abrirModal');
-        const miModal = document.getElementById('miModal');
-        const cerrarModal = document.getElementById('cerrarModal');
+        const abrirModal1 = document.getElementById('abrirModal1');
+        const miModal1 = document.getElementById('miModal1');
+        const cerrarModal1 = document.getElementById('cerrarModal1');
 
-        abrirModal.addEventListener('click',   
+        abrirModal1.addEventListener('click',   
  () => {
-            miModal.showModal();
+            miModal1.showModal();
         });
 
-        cerrarModal.addEventListener('click', () => {
-            miModal.close();
+        cerrarModal1.addEventListener('click', () => {
+            miModal1.close();
         });
     </script>
 								<!-- Fin Button modal -->
@@ -200,26 +200,26 @@
 
                                         </div>
                                     <!-- Inicio Button modal -->
-    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+    <a><button id="abrirModal2"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
 
-    <dialog id="miModal">
+    <dialog id="miModal2">
         <h2>¡Lo lamentamos!</h2>
         <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal">Cerrar</button>
+        <button id="cerrarModal2">Cerrar</button>
     </dialog>
 
     <script>
-        const abrirModal = document.getElementById('abrirModal');
-        const miModal = document.getElementById('miModal');
-        const cerrarModal = document.getElementById('cerrarModal');
+        const abrirModal2 = document.getElementById('abrirModal2');
+        const miModal2 = document.getElementById('miModal2');
+        const cerrarModal2 = document.getElementById('cerrarModal2');
 
-        abrirModal.addEventListener('click',   
+        abrirModal2.addEventListener('click',   
  () => {
-            miModal.showModal();
+            miModal2.showModal();
         });
 
-        cerrarModal.addEventListener('click', () => {
-            miModal.close();
+        cerrarModal2.addEventListener('click', () => {
+            miModal2.close();
         });
     </script>
 								<!-- Fin Button modal -->
