--- a/3roA.html
+++ b/3roA.html
@@ -146,7 +146,7 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card shadow p-3 mb-5 bg-danger rounded">
-                                        <img class="img-fluid" alt="100%x280" src="3ro A/Tutti Frutti.png">
+                                        <img class="img-fluid" alt="100%x280" src="3ro A/Tutti frutti.png">
                                         <div class="card-body">
                                             <h4 class="card-title">Tutti Frutti</h4>
                                             <p class="card-text">Sabor y salud en cada bocado.</p>
