--- a/3roB.html
+++ b/3roB.html
@@ -225,30 +225,9 @@
                                             <p class="card-text">Pura fruta, pura diversión.</p>
 
                                         </div>
-                                  <!-- Inicio Button modal -->
-    <a><button id="abrirModal3"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+                                   <a href="https://www.instagram.com/frutifunny_?igsh=aDc4aDd2N25rZ3Ix" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
 
-    <dialog id="miModal3">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal3">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal3 = document.getElementById('abrirModal3');
-        const miModal3 = document.getElementById('miModal3');
-        const cerrarModal3 = document.getElementById('cerrarModal3');
-
-        abrirModal3.addEventListener('click',   
- () => {
-            miModal3.showModal();
-        });
-
-        cerrarModal3.addEventListener('click', () => {
-            miModal3.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
 				    </div>
                                 </div>
 
