--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ color: #333;
                 <a class="nav-link" href="ubicacion.html" target="myFrame">Cómo llegar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formulario.html" target="myFrame">Déjanos un comentario</a>
+                <a class="nav-link" href="formulario.html" target="myFrame">¡Queremos saber tu opinión!</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
