--- a/3roB.html
+++ b/3roB.html
@@ -99,30 +99,9 @@
                                             <p class="card-text">La ola perfecta de sabor.</p>
 
                                         </div>
-                                       <!-- Inicio Button modal -->
-    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
-
-    <dialog id="miModal">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal = document.getElementById('abrirModal');
-        const miModal = document.getElementById('miModal');
-        const cerrarModal = document.getElementById('cerrarModal');
-
-        abrirModal.addEventListener('click',   
- () => {
-            miModal.showModal();
-        });
-
-        cerrarModal.addEventListener('click', () => {
-            miModal.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
+                                        </div>
+                                     <a href="https://drive.google.com/file/d/1JmZayO8ewLJOenGRQ-Hy_IeQSf9WpYkG/view?usp=sharing" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
                                       
                                     </div>
                                 </div>
