--- a/3roB.html
+++ b/3roB.html
@@ -98,11 +98,10 @@
                                             <h4 class="card-title">Surfing Smoothies</h4>
                                             <p class="card-text">La ola perfecta de sabor.</p>
 
-                                        </div>
-                                        </div>
-                                     <a href="https://drive.google.com/file/d/1JmZayO8ewLJOenGRQ-Hy_IeQSf9WpYkG/view?usp=sharing" target="_blank"> 
+                                         </div>
+                                     <a href="https://drive.google.com/file/d/1JmZayO8ewLJOenGRQ-Hy_IeQSf9WpYkG/view?usp=drive_link" target="_blank"> 
 									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
-                                      
+
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
