--- a/3roB.html
+++ b/3roB.html
@@ -168,31 +168,10 @@
                                             <h4 class="card-title">Las delicias de Pachorra</h4>
                                             <p class="card-text">Para el antojo imprevisto, ¡El pancho siempre listo!</p>
 
-                                        </div>
-                                     <!-- Inicio Button modal -->
-    <a><button id="abrirModal2"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+                                        </div>   
+					    <a href="https://drive.google.com/file/d/1EybTmPAsdC48MKAng-mFKfuAhbcqfjZh/view?usp=sharing" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
 
-    <dialog id="miModal2">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal2">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal2 = document.getElementById('abrirModal2');
-        const miModal2 = document.getElementById('miModal2');
-        const cerrarModal2 = document.getElementById('cerrarModal2');
-
-        abrirModal2.addEventListener('click',   
- () => {
-            miModal2.showModal();
-        });
-
-        cerrarModal2.addEventListener('click', () => {
-            miModal2.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
 				    </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
