--- a/2doB.html
+++ b/2doB.html
@@ -151,7 +151,7 @@
                                             <p class="card-text">El arte de la pizza.</p>
 
                                         </div>
- <a href="https://www.instagram.com/empanadas.al.paladar/profilecard/?igsh=MTE1cThla2dwcGowZg=="
+ <a href="https://www.instagram.com/_mammamiapizza_/profilecard/?igsh=b2RkdGZjMThueWpt"
                                target="_blank">
                                 <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button>
                             </a>
@@ -165,30 +165,10 @@
                                             <p class="card-text">No hay amor más sincero que el amor por las empanadas.</p>
 
                                         </div>
-                                     <!-- Inicio Button modal -->
-    <a><button id="abrirModal1"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
-
-    <dialog id="miModal1">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal1">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal1 = document.getElementById('abrirModal1');
-        const miModal1 = document.getElementById('miModal1');
-        const cerrarModal1 = document.getElementById('cerrarModal1');
-
-        abrirModal1.addEventListener('click',   
- () => {
-            miModal1.showModal();
-        });
-
-        cerrarModal1.addEventListener('click', () => {
-            miModal1.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
+                                    <a href="https://www.instagram.com/altapinta.ipmc?igsh=MXR4b2F2bnBhdTkzeQ=="
+                               target="_blank">
+                                <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button>
+                            </a>
 				    </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
