--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 <strong>Producción y comercialización:</strong> Los estudiantes producen y ofrecen bienes y servicios, simulando un entorno empresarial real.<br>
 <strong>Gestión contable y administrativa:</strong> Los alumnos de los últimos años se encargan de la coordinación, facturación y otras tareas administrativas, poniendo en práctica sus conocimientos contables.<br>
 <strong>Control de calidad y seguridad alimentaria:</strong> Los estudiantes de ciencias naturales aseguran la calidad de los productos y la seguridad de los consumidores.<br>
-
+<strong>Posta sanitaria:</strong>  En el contexto escolar, para fomentar la educación en salud, los estudiantes de la especialidad en ciencias naturales ofrecerán los siguientes controles: nivel de glucemia, tensión, índice de masa corporal, oxígeno en sangre y determinan grupo y factor sanguíneo.<br>
                 </p>
 
                 
